ops/platform-dev/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: content-library
  labels:
    app: content-library
spec:
  replicas: 1
  selector:
    matchLabels:
      app: content-library
  template:
    metadata:
      labels:
        app: content-library
    spec:
      serviceAccountName: content-library
      containers:
      - name: content-library
        image: gcr.io/adhoc-dev-service-platform/content-library:latest
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 3
        resources:
          requests:
            cpu: "512m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1024Mi"
      nodeSelector:
        platform.adhoc.dev/cost-type: spot
      tolerations:
        - key: "sandbox.gke.io/runtime"
          operator: "Equal"
          value: "gvisor"
          effect: "NoSchedule"
