ops/platform-dev/base/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: content-library-service
spec:
   selector:
      app: content-library
   ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: 3000
